<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>fastsig</groupId>
  <artifactId>fastsig</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <build>
    <sourceDirectory>src.bench</sourceDirectory>
    <testSourceDirectory>src.test</testSourceDirectory>
    <resources>
      <resource>
        <directory>src.bench</directory>
        <excludes>
          <exclude>**/*.java</exclude>
        </excludes>
      </resource>
      <resource>
        <directory>lib</directory>
        <excludes>
          <exclude>**/*.java</exclude>
        </excludes>
      </resource>
      <resource>
        <directory>src.lib</directory>
        <excludes>
          <exclude>**/*.java</exclude>
        </excludes>
      </resource>
    </resources>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.7.0</version>
        <configuration>
          <release>9</release>
        </configuration>
      </plugin>
    </plugins>
  </build>
  <dependencies>
	  <!-- https://mvnrepository.com/artifact/commons-cli/commons-cli -->
	<dependency>
	    <groupId>commons-cli</groupId>
	    <artifactId>commons-cli</artifactId>
	    <version>1.4</version>
	</dependency>
		<!-- https://mvnrepository.com/artifact/com.google.protobuf/protobuf-java -->
	<dependency>
	    <groupId>com.google.protobuf</groupId>
	    <artifactId>protobuf-java</artifactId>
	    <version>3.5.1</version>
	</dependency>
		<!-- https://mvnrepository.com/artifact/com.sun.xml.security/xml-security-impl -->
	<dependency>
	    <groupId>com.sun.xml.security</groupId>
	    <artifactId>xml-security-impl</artifactId>
	    <version>1.0</version>
	</dependency>
		<!-- https://mvnrepository.com/artifact/org.bouncycastle/bcprov-jdk15on -->
	<dependency>
	    <groupId>org.bouncycastle</groupId>
	    <artifactId>bcprov-jdk15on</artifactId>
	    <version>1.59</version>
	</dependency>	
	<!-- https://mvnrepository.com/artifact/junit/junit -->
	<dependency>
	    <groupId>junit</groupId>
	    <artifactId>junit</artifactId>
	    <version>4.12</version>
	    <scope>test</scope>
	</dependency>
	<!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
	<dependency>
	    <groupId>com.google.guava</groupId>
	    <artifactId>guava</artifactId>
	    <version>19.0</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/it.unimi.dsi/fastutil -->
	<dependency>
	    <groupId>it.unimi.dsi</groupId>
	    <artifactId>fastutil</artifactId>
	    <version>8.1.1</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
	<dependency>
	    <groupId>commons-codec</groupId>
	    <artifactId>commons-codec</artifactId>
	    <version>1.11</version>
	</dependency>	
	<dependency>
	<groupId>bb.util</groupId>
		<artifactId>bb-util</artifactId>
		<version>1.0</version>
		<scope>system</scope>
		<systemPath>${basedir}/lib/bb.jar</systemPath>
</dependency>
  </dependencies>
</project>